# private-document-rag

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  config.py  document_loader.py  embedder.py  main.py  ollama.py  rag.py  registry.py  schemas.py  store.py  tracing.py
data/: .gitkeep
ui/: streamlit_app.py
