[project]
name = "private-doc-copilot"
version = "0.1.0"
description = "Private document reader with local RAG, Qdrant, and Ollama"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "python-multipart>=0.0.9",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.3.0",
  "sentence-transformers>=3.0.0",
  "qdrant-client>=1.10.0",
  "numpy>=1.26.0",
  "httpx>=0.27.0",
  "requests>=2.32.0",
  "pypdf>=4.3.0",
  "python-docx>=1.1.2",
  "streamlit>=1.37.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
